feat(group): share key with group
